--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.9.0",
+    "react-is": "^17.0.2"
   }
 }
