--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.1.0",
     "eslint": "^8.9.0",
     "react-is": "^17.0.2"
   }
