--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.1.0",
+    "babel-eslint": "^10.1.0",
     "eslint": "^8.9.0",
     "react-is": "^17.0.2"
   }
