--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,3 @@
 {
-    "parser": "babel-eslint",
-    "extends": [
-      "eslint:recommended", 
-      "next",
-      "prettier"
-    ]
-  }
+    "parser": "babel-eslint"
+}
