fix build errors hopefully

--- a/package.json
+++ b/package.json
@@ -5,18 +5,26 @@
     "build": "next build",
     "start": "next start"
   },
+  "standard": {
+    "parser": "@babel/eslint-parser"
+  },
   "dependencies": {
     "eslint-config-prettier": "^8.4.0",
     "mongodb": "^4.1.3",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/eslint-parser": "^7.17.0",
     "@next/eslint-plugin-next": "^12.1.0",
     "babel-eslint": "^10.1.0",
+    "babel-preset-next": "^1.4.0",
     "eslint": "^8.9.0",
-    "react-is": "^17.0.2"
+    "eslint-config-next": "^12.1.0",
+    "react-dom": "^17.0.2",
+    "react-is": "^17.0.2",
+    "standardx": "^7.0.0"
   }
 }
